# MusikArchiveViewer

./: .gitignore  LICENSE  README.md  UdioArchiver.js  main.py  main.spec  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  user_guide.md
scripts/: build.py  create_project_structure.py  deploy.py
src/udio_media_manager/: __init__.py  __main__.py  config.py
src/udio_media_manager/core/: __init__.py  app.py  constants.py  exceptions.py  singleton.py
src/udio_media_manager/domain/: __init__.py  dto.py  enums.py  models.py
src/udio_media_manager/services/: __init__.py  audio_player.py  database.py  image_loader.py  metadata_parser.py  udio_service.py
src/udio_media_manager/ui/: __init__.py  audio_controller.py  event_handlers.py  main_window.py  menu_builder.py  scan_manager.py  window_builder.py
src/udio_media_manager/ui/components/: __init__.py  metadata_view.py  track_item.py  track_list.py  track_list_body.py  track_list_header.py
src/udio_media_manager/ui/components/virtual_list/: __init__.py  _init_.py  base.py  batch_processor.py  core.py  scroll_manager.py  viewport.py  widget_manager.py
src/udio_media_manager/ui/themes/: __init__.py  theme_manager.py
src/udio_media_manager/ui/widgets/: __init__.py  custom_widgets.py
src/udio_media_manager/utils/: __init__.py  file_utils.py  helpers.py  logging.py  validation.py
tests/: __init__.py  conftest.py  test_metadata.py  test_models.py  test_services.py  test_ui.py  test_utils.py
